--- a/src/Dralee.Generic.Xml.Test/Dralee.Generic.Xml.Test.csproj
+++ b/src/Dralee.Generic.Xml.Test/Dralee.Generic.Xml.Test.csproj
@@ -1,19 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.0</TargetFramework>
     <AssemblyName>FD.Generic.Xml.Test</AssemblyName>
-    <OutputType>Exe</OutputType>
     <PackageId>FD.Generic.Xml.Test</PackageId>
-    <RuntimeFrameworkVersion>1.0.4</RuntimeFrameworkVersion>
     <PackageTargetFallback>$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+    <TargetFramework>net6.0</TargetFramework>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FD.Generic.Xml\FD.Generic.Xml.csproj" />
+    <ProjectReference Include="..\Dralee.Generic.Xml\Dralee.Generic.Xml.csproj" />
   </ItemGroup>
 
   <ItemGroup>
