--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,7 +20,5 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
-    - name: src
-      run: cd src/Dralee.Generic.Xml && pwd && sh build.sh
-    - name: Build
-      run: echo ./build.sh
+    - name: publish
+      run: cd src/Dralee.Generic.Xml && pwd && sh publish.sh ${{ secrets.NUGET_KEY }}
